--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,7 +18,10 @@ header
                         if loggedInUser.avatarUrl === ""
                             span 😀
                         else
-                            img(src="/"+loggedInUser.avatarUrl).header__avatar
+                            if loggedInUser.socialOnly
+                                img(src=loggedInUser.avatarUrl).header__avatar
+                            else
+                                img(src="/"+loggedInUser.avatarUrl).header__avatar
             else
                 li
                     a(href="/login") Login
