--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,7 +18,7 @@ header
                         if loggedInUser.avatarUrl === ""
                             span 😀
                         else
-                            if loggedInUser.socialOnly
+                            if loggedInUser.avatarUrl.includes("github") || loggedInUser.avatarUrl.includes("kakao")
                                 img(src=loggedInUser.avatarUrl).header__avatar
                             else
                                 img(src="/"+loggedInUser.avatarUrl).header__avatar
