--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -18,10 +18,11 @@ header
                         if loggedInUser.avatarUrl === ""
                             span 😀
                         else
-                            if loggedInUser.avatarUrl.includes("github") || loggedInUser.avatarUrl.includes("kakao")
-                                img(src=loggedInUser.avatarUrl).header__avatar
-                            else
-                                img(src="/"+loggedInUser.avatarUrl).header__avatar
+                            if loggedInUser.avatarUrl
+                                if loggedInUser.avatarUrl.includes("github") || loggedInUser.avatarUrl.includes("kakao")
+                                    img(src=loggedInUser.avatarUrl).header__avatar
+                                else
+                                    img(src=loggedInUser.avatarUrl).header__avatar
             else
                 li
                     a(href="/login") Login
