--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -2,6 +2,7 @@ extends base.pug
 include mixins/video
 
 block content 
+    //- .뒤에 오는 것이 class명
     form(method="GET").search__form
         input(placeholder="Search by title", type="text", name="keyword")
         button
