--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -1,8 +1,11 @@
 extends base
 
-block content 
+//-회원가입에 필요한 내용 추가
+block content
+    //-error가 생기면 errorMessage 출력
     if errorMessage 
         span=errorMessage
+    //-form에는 method라는 요소가 있음. get은 데이터를 요청하는 것. post는 데이터를 보내는 것.
     form(method="POST")
         input(name="name", type="text", required, placeholder="Name")
         input(name="email", type="email", required, placeholder="Email")
@@ -11,6 +14,7 @@ block content
         input(name="password2", type="password", required, placeholder="Confirm Password")
         input(name="location", type="text", required, placeholder="Location")
         input(type="submit", value="Join")
+        //-미리 생성한 파일을 첨부.
         include partials/social-login
     div.auth-switch
         span Already have an account? 
